// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TemplateCard should match the snapshot when type is giving-help 1`] = `
<div
  className="ScheduleCard TemplateCard"
>
  <p>
    You haven't been booked yet. Check back soon. 
     
    <span
      aria-label="smiley emoji"
      role="img"
    >
      🙂
    </span>
  </p>
</div>
`;

exports[`TemplateCard should match the snapshot when type is openings 1`] = `
<div
  className="ScheduleCard TemplateCard"
>
  <p>
    You have no openings. 
     
    <span
      aria-label="crying emoji"
      role="img"
    >
      😭
    </span>
  </p>
</div>
`;

exports[`TemplateCard should match the snapshot when type is receiving-help 1`] = `
<div
  className="ScheduleCard TemplateCard"
>
  <p>
    Sign up to pair. Coding is better with friends. 
     
    <span
      aria-label="100 emoji"
      role="img"
    >
      💯
    </span>
  </p>
</div>
`;
